src/tests/data/TypeErrors/AssignWrongCallToInt.c

#include <stdio.h>

char f() {}

int main()
{
	int a = f();    // ERROR
	return 0;
}